fixed jumpiness in outfit checker carousel and smoothed nav opening/closing

--- a/app/assets/stylesheets/suitcases.scss
+++ b/app/assets/stylesheets/suitcases.scss
@@ -85,7 +85,7 @@ p, li, a {
   overflow: hidden;
   background-color: #e7c6ba;
   background-size: 100%;
-  transition: margin-left .5s;
+  transition: margin-left .5s ease;
   padding: 0px;
   left: 0px;
 }
@@ -118,7 +118,7 @@ p, li, a {
   left: 0;
   background-color: white;
   overflow-x: hidden;
-  transition: 0.5s;
+  transition: 0.5s ease;
   -webkit-box-shadow: 2px 3px 15px -4px black;
 
   &.is-dragging {
@@ -185,7 +185,7 @@ p, li, a {
 
 .shoes-container {
   height: 100px;
-  width: 100%;
+  // width: 100%;
   // overflow: hidden;
   transition: margin-left .5s;
 }
@@ -298,6 +298,10 @@ h4 {
 .draggable {
   display: inline-block;
   width: 60%;
+}
+
+.clothes-container .slick-slider {
+  margin: 0 130px;
 }
 
 // .connectedSortable > ul {
